Disabled workaround for MJAVADOC-568.